2008-12-28  Sergey Sinkovskiy  <glorybox.away@gmail.com>
	* src/vecto-chart.lisp (render-png-stream): draw-axis now part of this method
	* src/vecto-chart.lisp (with-line-chart): fixed leaked abstraction (width height forms evaluated several times in macro)
	* src/vecto-chart.lisp (line-chart): new slot - draw-grid-p, defaults to T

2008-12-27  Sergey Sinkovskiy  <glorybox.away@gmail.com>

	* src/vecto-chart.lisp (draw-grid*): new method
	(draw-grid): new helper method
	* colors now aren't rotated
	* (hex->rgb): new method to convert hex colors #aabbcc to (0.rr 0.gg 0.bb) style
	* with-line-chart now accepts :draw-grid argument which can be T or NIL
	* minor fixes
	
2008-12-07 Sergey Sinkovskiy <glorybox.away@gmail.com>

	* graph-server.lisp: removed commented out condition
	* vecto-chart.lisp: fixed scaling,
	fixed start point

2008-12-07 Sergey Sinkovskiy <glorybox.away@gmail.com>

	* added scaling
	* minor fixes